--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,11 @@ html {
   margin: 0px;
   min-height: 100vh;
   max-width: 100vw;
-  background-color: #3b444a;
+  background-color: #999;
   background-blend-mode: multiply;
   overflow-x: hidden;
-  background: url("../assets/img/bg.jpg") center center / cover no-repeat, linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5));
+  background-size: cover;
+  transition: background-image .5s ease-in-out;
 }
 
 body {
